--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "learning es6 features by doing examples",
   "main": "index.js",
   "scripts": {
+    "watch": "babel -w src -d lib",
     "build": "babel src -d lib"
   },
   "repository": {
