--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "learning es6 features by doing examples",
   "main": "index.js",
   "scripts": {
-    "watch": "babel -w src -d lib",
-    "build": "babel src -d lib"
+    "watch": "babel -w src -d dist",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
